@@ -202,48 +202,224 @@ class ModificationToExcludeTest {
     }
 
     @Test
-    void testDuplicateNodeBetweenStudiesWithModificationsToExclude() {
-        // create study with two root networks
-        StudyEntity studyEntity = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
-        createDummyRootNetwork(studyEntity, "secondRootNetwork");
-        studyRepository.save(studyEntity);
-        List<BasicRootNetworkInfos> rootNetworkBasicInfos = studyService.getExistingBasicRootNetworkInfos(studyEntity.getId());
+    void testDuplicateNodeWithCommonAndUniqueRootNetworksBetweenStudies() {
+        UUID modA = UUID.randomUUID();
+        UUID modB = UUID.randomUUID();
+        UUID modC = UUID.randomUUID();
+        Set<UUID> modificationsToExcludeCom = Set.of(modB, modC);
+        Set<UUID> modificationsToExcludeRnq = Set.of(modA, modB, modC);
+        Map<UUID, UUID> originToDuplicateModificationUuidMap = Map.of(
+                modA, UUID.randomUUID(),
+                modB, UUID.randomUUID(),
+                modC, UUID.randomUUID()
+        );
+        // Create study S1
+        StudyEntity studyS1 = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        createDummyRootNetwork(studyS1, "S1RN1", "COM");
+        createDummyRootNetwork(studyS1, "S1RN2", "RNS");
+        studyRepository.save(studyS1);
+        List<BasicRootNetworkInfos> s1RootInfos = studyService.getExistingBasicRootNetworkInfos(studyS1.getId());
 
-        // create root node and a network modification node - it will create a RootNetworkNodeInfoEntity for each root network
-        NodeEntity rootNode = networkModificationTreeService.createRoot(studyEntity);
-        NetworkModificationNode firstNode = networkModificationTreeService.createNode(studyEntity, rootNode.getIdNode(), createModificationNodeInfo(NODE_1_NAME), InsertMode.AFTER, null);
+        // Create node N1 with modifications A, B, C
+        NodeEntity rootNodeS1 = networkModificationTreeService.createRoot(studyS1);
+        NetworkModificationNode nodeN1 = networkModificationTreeService.createNode(
+                studyS1, rootNodeS1.getIdNode(), createModificationNodeInfo("N1"), InsertMode.AFTER, null);
 
-        // for each RootNetworkNodeInfoEntity, set some modifications to exclude
-        RootNetworkNodeInfoEntity rootNetworkNodeInfoEntity1 = rootNetworkNodeInfoRepository.findByNodeInfoIdAndRootNetworkId(firstNode.getId(), rootNetworkBasicInfos.getFirst().rootNetworkUuid()).orElseThrow(() -> new StudyException(NOT_FOUND, "Root network not found"));
-        rootNetworkNodeInfoEntity1.setModificationsUuidsToExclude(MODIFICATIONS_TO_EXCLUDE_RN_1);
-        rootNetworkNodeInfoRepository.save(rootNetworkNodeInfoEntity1);
+        // Modifications A and B are excluded for the root network with tag "COM" in study S1
+        RootNetworkNodeInfoEntity rnComS1 = rootNetworkNodeInfoRepository
+                .findByNodeInfoIdAndRootNetworkId(nodeN1.getId(), s1RootInfos.get(1).rootNetworkUuid())
+                .orElseThrow();
+        rnComS1.setModificationsUuidsToExclude(modificationsToExcludeCom); // ex: B, C
+        rootNetworkNodeInfoRepository.save(rnComS1);
 
-        RootNetworkNodeInfoEntity rootNetworkNodeInfoEntity2 = rootNetworkNodeInfoRepository.findByNodeInfoIdAndRootNetworkId(firstNode.getId(), rootNetworkBasicInfos.get(1).rootNetworkUuid()).orElseThrow(() -> new StudyException(NOT_FOUND, "Root network not found"));
-        rootNetworkNodeInfoEntity2.setModificationsUuidsToExclude(MODIFICATIONS_TO_EXCLUDE_RN_2);
-        rootNetworkNodeInfoRepository.save(rootNetworkNodeInfoEntity2);
+        RootNetworkNodeInfoEntity rnRnsS1 = rootNetworkNodeInfoRepository
+                .findByNodeInfoIdAndRootNetworkId(nodeN1.getId(), s1RootInfos.get(2).rootNetworkUuid())
+                .orElseThrow();
+        rnRnsS1.setModificationsUuidsToExclude(modificationsToExcludeRnq); // ex: A, B, C
+        rootNetworkNodeInfoRepository.save(rnRnsS1);
 
-        // create another study, the target of the node duplication
-        StudyEntity studyEntity2 = TestUtils.createDummyStudy(NETWORK_UUID2, CASE_UUID2, CASE_NAME2, CASE_FORMAT2, REPORT_UUID2);
-        createDummyRootNetwork(studyEntity2, "secondRootNetwork2");
-        studyRepository.save(studyEntity2);
-        List<BasicRootNetworkInfos> rootNetworkBasicInfos2 = studyService.getExistingBasicRootNetworkInfos(studyEntity2.getId());
+        // Create Study 2
+        StudyEntity studyS2 = TestUtils.createDummyStudy(NETWORK_UUID2, CASE_UUID2, CASE_NAME2, CASE_FORMAT2, REPORT_UUID2);
+        createDummyRootNetwork(studyS2, "S2RN1", "COM");
+        createDummyRootNetwork(studyS2, "S2RN2", "RNT");
+        studyRepository.save(studyS2);
 
-        // create root node for this new study
-        NodeEntity rootNode2 = networkModificationTreeService.createRoot(studyEntity2);
+        List<BasicRootNetworkInfos> s2RootInfos = studyService.getExistingBasicRootNetworkInfos(studyS2.getId());
+        NodeEntity rootNodeS2 = networkModificationTreeService.createRoot(studyS2);
 
-        // mock duplicateModificationsGroup to return a mapping between origin modification uuid and their duplicate uuid
-        Mockito.doReturn(ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP).when(networkModificationService).duplicateModificationsGroup(any(), any());
+        // Mock duplicated modifications
+        Mockito.doReturn(originToDuplicateModificationUuidMap)
+                .when(networkModificationService)
+                .duplicateModificationsGroup(any(), any());
 
-        // run duplication
-        UUID duplicateNodeUuid = networkModificationTreeService.duplicateStudyNode(firstNode.getId(), rootNode2.getIdNode(), InsertMode.AFTER);
+        // Duplicate Node N1 from S1 to S2
+        UUID duplicateNodeUuid = networkModificationTreeService.duplicateStudyNode(
+                nodeN1.getId(), rootNodeS2.getIdNode(), InsertMode.AFTER);
 
-        // get RootNetworkNodeInfoEntity of newly duplicated node
-        RootNetworkNodeInfoEntity duplicateRootNetworkNodeInfoEntity1 = rootNetworkNodeInfoRepository.findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(duplicateNodeUuid, rootNetworkBasicInfos2.get(0).rootNetworkUuid()).orElseThrow(() -> new StudyException(NOT_FOUND, "Root network not found"));
-        RootNetworkNodeInfoEntity duplicateRootNetworkNodeInfoEntity2 = rootNetworkNodeInfoRepository.findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(duplicateNodeUuid, rootNetworkBasicInfos2.get(1).rootNetworkUuid()).orElseThrow(() -> new StudyException(NOT_FOUND, "Root network not found"));
+        // Check that the common root network (COM) on S2 has the same excluded modifications copied from S1
+        RootNetworkNodeInfoEntity rnComS2 = rootNetworkNodeInfoRepository
+                .findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(
+                        duplicateNodeUuid, s2RootInfos.stream().filter(rn -> "COM".equals(rn.tag())).toList().getFirst().rootNetworkUuid())
+                .orElseThrow();
+        assertEquals(
+                modificationsToExcludeCom.stream()
+                        .map(originToDuplicateModificationUuidMap::get)
+                        .collect(Collectors.toSet()),
+                rnComS2.getModificationsUuidsToExclude(),
+                "Excluded modifications must be copied for the common root network"
+        );
 
-        // assert those values are empty, duplicating node between studies should empty modifications to exclude
-        assertTrue(duplicateRootNetworkNodeInfoEntity1.getModificationsUuidsToExclude().isEmpty());
-        assertTrue(duplicateRootNetworkNodeInfoEntity2.getModificationsUuidsToExclude().isEmpty());
+        // Check the target unique root network (RNT) → all active modifications
+        RootNetworkNodeInfoEntity rnRntS2 = rootNetworkNodeInfoRepository
+                .findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(
+                        duplicateNodeUuid, s2RootInfos.stream().filter(rn -> "RNT".equals(rn.tag())).toList().getFirst().rootNetworkUuid())
+                .orElseThrow();
+        assertTrue(rnRntS2.getModificationsUuidsToExclude().isEmpty(),
+                "Target unique root network (RNT) should not have modifications to exclude");
+    }
+
+    @Test
+    void testDuplicateNodeBetweenStudiesWithModificationsToExcludeForCommonTag() {
+        // -------- Study 1 --------
+        StudyEntity study1 = TestUtils.createDummyStudy(
+                NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID
+        );
+        createDummyRootNetwork(study1, "rootNetwork1", "X"); // RN1 with tag X
+        createDummyRootNetwork(study1, "rootNetwork2", "Y"); // RN2 with tag Y
+        studyRepository.save(study1);
+
+        List<BasicRootNetworkInfos> rootNetworksStudy1 = studyService.getExistingBasicRootNetworkInfos(study1.getId());
+
+        NodeEntity rootNodeS1 = networkModificationTreeService.createRoot(study1);
+        NetworkModificationNode nodeS1 = networkModificationTreeService.createNode(study1, rootNodeS1.getIdNode(), createModificationNodeInfo(NODE_1_NAME), InsertMode.AFTER, null);
+
+        UUID modificationOrigineUuid = MODIFICATION_TO_EXCLUDE_1;
+
+        // Exclude Modifications for RN2 (tag Y)
+        BasicRootNetworkInfos rnYStudy1 = rootNetworksStudy1.stream()
+                .filter(rn -> "Y".equals(rn.tag()))
+                .findFirst()
+                .orElseThrow();
+
+        RootNetworkNodeInfoEntity rnInfoStudy1 = rootNetworkNodeInfoRepository
+                .findByNodeInfoIdAndRootNetworkId(nodeS1.getId(), rnYStudy1.rootNetworkUuid())
+                .orElseThrow();
+
+        rnInfoStudy1.setModificationsUuidsToExclude(Set.of(modificationOrigineUuid));
+        rootNetworkNodeInfoRepository.save(rnInfoStudy1);
+
+        // -------- Study 2 --------
+        StudyEntity study2 = TestUtils.createDummyStudy(
+                NETWORK_UUID2, CASE_UUID2, CASE_NAME2, CASE_FORMAT2, REPORT_UUID2
+        );
+        createDummyRootNetwork(study2, "rootNetwork1_2", "X"); // RN1 with tag X
+        createDummyRootNetwork(study2, "rootNetwork2_2", "Y"); // RN2 with tag Y
+        studyRepository.save(study2);
+
+        List<BasicRootNetworkInfos> rootNetworksStudy2 =
+                studyService.getExistingBasicRootNetworkInfos(study2.getId());
+
+        NodeEntity rootNodeS2 = networkModificationTreeService.createRoot(study2);
+
+        Mockito.doReturn(ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP)
+                .when(networkModificationService)
+                .duplicateModificationsGroup(any(), any());
+
+        // -------- Duplicate node --------
+        UUID duplicatedNodeUuid = networkModificationTreeService.duplicateStudyNode(nodeS1.getId(), rootNodeS2.getIdNode(), InsertMode.AFTER);
+
+        UUID modificationDupliqueeUuid = ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP.get(modificationOrigineUuid);
+
+        // -------- Assertions --------
+
+        // RN2 tag Y (common) -> modification EXCLUDED
+        BasicRootNetworkInfos rnYStudy2 = rootNetworksStudy2.stream()
+                .filter(rn -> "Y".equals(rn.tag()))
+                .findFirst()
+                .orElseThrow();
+
+        RootNetworkNodeInfoEntity rnYInfoStudy2 = rootNetworkNodeInfoRepository.findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(duplicatedNodeUuid, rnYStudy2.rootNetworkUuid()).orElseThrow();
+
+        assertTrue(rnYInfoStudy2.getModificationsUuidsToExclude().contains(modificationDupliqueeUuid),
+                "Duplicated Modification should be excluded on RN2 (tag Y)");
+
+        // RN1 tag X -> modification active (not excluded)
+        BasicRootNetworkInfos rnXStudy2 = rootNetworksStudy2.stream()
+                .filter(rn -> "X".equals(rn.tag()))
+                .findFirst()
+                .orElseThrow();
+
+        RootNetworkNodeInfoEntity rnXInfoStudy2 = rootNetworkNodeInfoRepository.findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(duplicatedNodeUuid, rnXStudy2.rootNetworkUuid()).orElseThrow();
+
+        assertTrue(rnXInfoStudy2.getModificationsUuidsToExclude().isEmpty(), "Modification is active on RN1 (tag X)");
+    }
+
+    @Test
+    void testDuplicateNodeBetweenStudies() {
+        // create Study 1
+        StudyEntity sourceStudy = TestUtils.createDummyStudy(NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID);
+        createDummyRootNetwork(sourceStudy, "RN_COMMON");
+        createDummyRootNetwork(sourceStudy, "RN_ONLY_SOURCE");
+        studyRepository.save(sourceStudy);
+
+        List<BasicRootNetworkInfos> sourceRootInfos = studyService.getExistingBasicRootNetworkInfos(sourceStudy.getId());
+
+        // Create nodes on study 1
+        NodeEntity rootNode = networkModificationTreeService.createRoot(sourceStudy);
+        NetworkModificationNode sourceNode = networkModificationTreeService.createNode(
+                sourceStudy, rootNode.getIdNode(), createModificationNodeInfo(NODE_1_NAME), InsertMode.AFTER, null
+        );
+
+        // excluded modifications
+        RootNetworkNodeInfoEntity rnCommonSource = rootNetworkNodeInfoRepository
+                .findByNodeInfoIdAndRootNetworkId(sourceNode.getId(), sourceRootInfos.getFirst().rootNetworkUuid())
+                .orElseThrow();
+        rnCommonSource.setModificationsUuidsToExclude(MODIFICATIONS_TO_EXCLUDE_RN_1);
+        rootNetworkNodeInfoRepository.save(rnCommonSource);
+
+        RootNetworkNodeInfoEntity rnOnlySource = rootNetworkNodeInfoRepository
+                .findByNodeInfoIdAndRootNetworkId(sourceNode.getId(), sourceRootInfos.get(1).rootNetworkUuid())
+                .orElseThrow();
+        rnOnlySource.setModificationsUuidsToExclude(MODIFICATIONS_TO_EXCLUDE_RN_2);
+        rootNetworkNodeInfoRepository.save(rnOnlySource);
+
+        // Study 2
+        StudyEntity targetStudy = TestUtils.createDummyStudy(NETWORK_UUID2, CASE_UUID2, CASE_NAME2, CASE_FORMAT2, REPORT_UUID2);
+        createDummyRootNetwork(targetStudy, "RN_COMMON");
+        createDummyRootNetwork(targetStudy, "RN_ONLY_TARGET");
+        studyRepository.save(targetStudy);
+
+        List<BasicRootNetworkInfos> targetRootInfos = studyService.getExistingBasicRootNetworkInfos(targetStudy.getId());
+        NodeEntity targetRootNode = networkModificationTreeService.createRoot(targetStudy);
+
+        // 4️⃣ Mock UUID duplications
+        Mockito.doReturn(ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP)
+                .when(networkModificationService)
+                .duplicateModificationsGroup(any(), any());
+
+        //  duplicate node from source to target study
+        UUID duplicateNodeUuid = networkModificationTreeService.duplicateStudyNode(
+                sourceNode.getId(), targetRootNode.getIdNode(), InsertMode.AFTER
+        );
+
+        // get root networks with common tag
+        RootNetworkNodeInfoEntity rnCommonTarget = rootNetworkNodeInfoRepository
+                .findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(
+                        duplicateNodeUuid, targetRootInfos.get(0).rootNetworkUuid()
+                ).orElseThrow();
+
+        assertEquals(
+                MODIFICATIONS_TO_EXCLUDE_RN_1.stream().map(ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP::get).collect(Collectors.toSet()),
+                rnCommonTarget.getModificationsUuidsToExclude()
+        );
+
+        // check that exclusions is ignored for non common root networks
+        RootNetworkNodeInfoEntity rnOnlyTarget = rootNetworkNodeInfoRepository
+                .findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(
+                        duplicateNodeUuid, targetRootInfos.get(1).rootNetworkUuid()
+                ).orElseThrow();
+
+        assertTrue(rnOnlyTarget.getModificationsUuidsToExclude().isEmpty());
     }
 
     @Test
@@ -282,6 +458,129 @@ class ModificationToExcludeTest {
         assertEquals(excludedNetworkModifications.getFirst().modificationUuidsToExclude(), rootNetworkNodeInfoRepository.findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(firstNode.getId(), rootNetworkBasicInfos.getFirst().rootNetworkUuid()).orElseThrow().getModificationsUuidsToExclude());
         assertEquals(excludedNetworkModifications.get(1).rootNetworkUuid(), rootNetworkBasicInfos.get(1).rootNetworkUuid());
         assertEquals(excludedNetworkModifications.get(1).modificationUuidsToExclude(), rootNetworkNodeInfoRepository.findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(firstNode.getId(), rootNetworkBasicInfos.get(1).rootNetworkUuid()).orElseThrow().getModificationsUuidsToExclude());
+    }
+
+    @Test
+    void testDuplicateModificationBetweenStudiesWithCommonRootNetworkTag() {
+        // -------- STUDY 1 --------
+        StudyEntity study1 = TestUtils.createDummyStudy(
+                NETWORK_UUID, CASE_UUID, CASE_NAME, CASE_FORMAT, REPORT_UUID
+        );
+
+        createDummyRootNetwork(study1, "rnCommon", "COM");
+        createDummyRootNetwork(study1, "rnOnly1", "O1");
+
+        studyRepository.save(study1);
+
+        List<BasicRootNetworkInfos> rnStudy1 =
+                studyService.getExistingBasicRootNetworkInfos(study1.getId());
+
+        NodeEntity root1 = networkModificationTreeService.createRoot(study1);
+        NetworkModificationNode node1 =
+                networkModificationTreeService.createNode(
+                        study1, root1.getIdNode(),
+                        createModificationNodeInfo(NODE_1_NAME),
+                        InsertMode.AFTER, null
+                );
+
+        // Put exclusions ONLY on COMMON root network
+        UUID commonRn1 = rnStudy1.stream()
+                .filter(r -> "COM".equals(r.tag()))
+                .findFirst().orElseThrow()
+                .rootNetworkUuid();
+
+        RootNetworkNodeInfoEntity rnInfo1 =
+                rootNetworkNodeInfoRepository
+                        .findByNodeInfoIdAndRootNetworkId(node1.getId(), commonRn1)
+                        .orElseThrow();
+
+        rnInfo1.setModificationsUuidsToExclude(MODIFICATIONS_TO_EXCLUDE_RN_1);
+        rootNetworkNodeInfoRepository.save(rnInfo1);
+
+        // -------- STUDY 2 --------
+
+        StudyEntity study2 = TestUtils.createDummyStudy(
+                NETWORK_UUID2, CASE_UUID2, CASE_NAME2, CASE_FORMAT2, REPORT_UUID2
+        );
+
+        createDummyRootNetwork(study2, "rnOther", "OTH");
+        createDummyRootNetwork(study2, "rnCommon", "COM");
+
+        studyRepository.save(study2);
+
+        List<BasicRootNetworkInfos> rnStudy2 =
+                studyService.getExistingBasicRootNetworkInfos(study2.getId());
+        NodeEntity root2 = networkModificationTreeService.createRoot(study2);
+        NetworkModificationNode node2 =
+                networkModificationTreeService.createNode(
+                        study2, root2.getIdNode(),
+                        createModificationNodeInfo(NODE_2_NAME),
+                        InsertMode.AFTER, null
+                );
+
+        // -------- MOCK DUPLICATION RESULT --------
+        List<ModificationsToCopyInfos> modifications = List.of(
+                ModificationsToCopyInfos.builder().uuid(MODIFICATION_TO_EXCLUDE_1).build(),
+                ModificationsToCopyInfos.builder().uuid(MODIFICATION_TO_EXCLUDE_2).build()
+        );
+
+        Mockito.doReturn(
+                        new NetworkModificationsResult(
+                                modifications.stream()
+                                        .map(m -> ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP.get(m.getUuid()))
+                                        .toList(),
+                                List.of()
+                        )
+                ).when(networkModificationService)
+                .duplicateOrInsertModifications(any(), any(), any());
+        // -------- EXECUTE --------
+        studyService.duplicateOrInsertNetworkModifications(
+                study2.getId(),
+                node2.getId(),
+                study1.getId(),
+                node1.getId(),
+                modifications,
+                USER_ID,
+                StudyConstants.ModificationsActionType.COPY
+        );
+        // -------- ASSERT COMMON ROOT NETWORK --------
+        UUID commonRn2 = rnStudy2.stream()
+                .filter(r -> "COM".equals(r.tag()))
+                .findFirst().orElseThrow()
+                .rootNetworkUuid();
+
+        RootNetworkNodeInfoEntity resultCommon =
+                rootNetworkNodeInfoRepository
+                        .findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(
+                                node2.getId(), commonRn2
+                        ).orElseThrow();
+
+        Set<UUID> duplicatedUuids = modifications.stream()
+                .map(ModificationsToCopyInfos::getUuid)
+                .map(ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP::get)
+                .collect(Collectors.toSet());
+
+        Set<UUID> expected = MODIFICATIONS_TO_EXCLUDE_RN_1.stream()
+                .map(ORIGIN_TO_DUPLICATE_MODIFICATION_UUID_MAP::get)
+                .filter(duplicatedUuids::contains)
+                .collect(Collectors.toSet());
+
+        assertEquals(expected, resultCommon.getModificationsUuidsToExclude());
+
+        // -------- ASSERT NON-COMMON ROOT NETWORK --------
+
+        UUID otherRn2 = rnStudy2.stream()
+                .filter(r -> "OTH".equals(r.tag()))
+                .findFirst().orElseThrow()
+                .rootNetworkUuid();
+
+        RootNetworkNodeInfoEntity resultOther =
+                rootNetworkNodeInfoRepository
+                        .findWithModificationsToExcludeByNodeInfoIdAndRootNetworkId(
+                                node2.getId(), otherRn2
+                        ).orElseThrow();
+
+        assertTrue(resultOther.getModificationsUuidsToExclude().isEmpty());
     }
 
     @Test
@@ -555,15 +854,19 @@ class ModificationToExcludeTest {
         assertThat(buildInfosCaptor.getValue().getModificationUuidsToExclude().get(secondNode.getModificationGroupUuid())).usingRecursiveComparison().ignoringCollectionOrder().isEqualTo(MODIFICATIONS_TO_EXCLUDE_RN_2);
     }
 
-    private void createDummyRootNetwork(StudyEntity studyEntity, String name) {
+    private void createDummyRootNetwork(StudyEntity studyEntity, String name, String tag) {
         RootNetworkEntity rootNetworkEntity = RootNetworkInfos.builder()
             .id(UUID.randomUUID())
             .name(name)
-            .tag(UUID.randomUUID().toString().substring(0, 4))
+            .tag(tag)
             .caseInfos(new CaseInfos(UUID.randomUUID(), UUID.randomUUID(), "caseName", "caseFormat"))
             .networkInfos(new NetworkInfos(UUID.randomUUID(), UUID.randomUUID().toString()))
             .reportUuid(UUID.randomUUID())
             .build().toEntity();
         studyEntity.addRootNetwork(rootNetworkEntity);
+    }
+
+    private void createDummyRootNetwork(StudyEntity studyEntity, String name) {
+        createDummyRootNetwork(studyEntity, name, UUID.randomUUID().toString().substring(0, 4));
     }
 }
